[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/Press_Start_2P/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://videos/GameJamFirst (DEBUG) 2022-06-05 10-51-33.webm" type="VideoStream" id=2]
[ext_resource path="res://UI/VideoPlayer.gd" type="Script" id=3]
[ext_resource path="res://UI/Tutorial.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 5
extra_spacing_space = 5
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0862745, 0.431373, 0.478431, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.145098, 0.141176, 0.27451, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.145098, 0.301961, 0.439216, 1 )

[node name="TutorialNode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.698039, 0.85098, 0.258824, 0.690196 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -280.0
margin_right = 276.0
margin_bottom = 142.0
custom_constants/separation = 30
alignment = 1

[node name="TutorialTitle" type="Label" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 556.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Jump Evolution"
align = 1
valign = 1

[node name="TutorialDesc" type="Label" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 556.0
margin_bottom = 117.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 2 )
text = "This new evolution enables you to jump using spacebar"
align = 1
valign = 1
autowrap = true

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = -30.0
margin_right = 1822.0
margin_bottom = 1050.0
rect_scale = Vector2( 0.1, 0.1 )
stream = ExtResource( 2 )
volume_db = -80.0
autoplay = true
expand = false
script = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = 107.0
margin_right = 35.5
margin_bottom = 152.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
text = "OK"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
